# Matilde

./: README.md
machineLearning/: AttackerPNP.h  ConfigurationParameters.h  DiveHandle.h  GoalieLearner.h  GoalieLearningBehavior.h  GolieLearner.h  InvAttackerPNP.h  keeperJumpLeft.mof
machineLearning/DiveHandler/: DiveHandler.cpp  DiveHandler.h
naoqi/modules/AMRmodule/: CMakeLists.txt  qiproject.xml
naoqi/modules/AMRmodule/include/: amrModule.h  controller.h  potentialField.h
naoqi/modules/AMRmodule/src/: amrModule.cpp  amrModuleMain.cpp  potentialField.cpp
naoqi/modules/R2module/: CMakeLists.txt  qiproject.xml
naoqi/modules/R2module/config/: CoM_head.cfg  CoM_leftArm.cfg  CoM_leftLeg.cfg  CoM_rightArm.cfg  CoM_rightLeg.cfg  dh_LAbase.cfg  dh_LLbase.cfg  dh_RAbase.cfg  dh_RLbase.cfg  dh_head.cfg  dh_leftArm.cfg  dh_leftLeg.cfg  dh_rightArm.cfg  dh_rightLeg.cfg  joints_params.cfg
naoqi/modules/R2module/include/: configParams.h  configReader.h  r2Module.h  task.h  taskManager.h
naoqi/modules/R2module/include/libmath/: Rutils.h  kinChain.h  transform.h
naoqi/modules/R2module/soth-master/: CMakeLists.txt
naoqi/modules/R2module/soth-master/cmake/: boost.cmake
naoqi/modules/R2module/soth-master/src/: CMakeLists.txt  Givens.hpp  HCOD.hpp  Stage.cpp
naoqi/modules/R2module/src/: configReader.cpp  main.cpp  r2Module.cpp  r2ModuleMain.cpp  r2Module_backUp.cpp  task.cpp  taskManager.cpp
naoqi/modules/R2module/src/libmath/: Rutils.cpp  kinChain.cpp  transform.cpp
